src/objects/Advancement_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>API_HEDA_Class__c</fullName>
        <defaultValue>&apos;API_HEDA&apos;</defaultValue>
        <description>The name of the class that enables HEDA to access the Gift Processing TDTM interface. Do not change the default value for this field.</description>
        <inlineHelpText>The name of the class that enables HEDA to access the Gift Processing TDTM interface. Do not change the default value for this field.</inlineHelpText>
        <label>API HEDA Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NPSP_Class__c</fullName>
        <defaultValue>&apos;API_NPSP&apos;</defaultValue>
        <description>The name of the class that enables NPSP to access the Gift Processing TDTM interface. Do not change the default value for this field.</description>
        <inlineHelpText>The name of the class that enables NPSP to access the Gift Processing TDTM interface. Do not change the default value for this field.</inlineHelpText>
        <label>API NPSP Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Advancement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Gift Processing in HEDA and NPSP. Do not change the default value for this field.</description>
        <inlineHelpText>Enable Gift Processing in HEDA and NPSP. Do not change the default value for this field.</inlineHelpText>
        <label>Use Advancement</label>
        <type>Checkbox</type>
    </fields>
    <label>Advancement Setting</label>
    <pluralLabel>Advancement Settings</pluralLabel>
</CustomObject>